# harvey_prod

./: README.md  docker-compose.yml  pyproject.toml  requirements.yml
api/: Dockerfile  app.py  requirements.txt  requirements_gunicorn.txt
api/model/BTC-USD/v/: m1__20201231.pkl
api/model/DOGE-USD/: m1.pkl  m1_features.json
api/model/DOGE-USD/v/: m1_features__20201231.json
api/model/ETH-USD/: m1.pkl
api/model/ETH-USD/v/: v - Shortcut.lnk
api/model/LTC-USD/: m1.pkl
api/model/XRP-USD/v/: m1__20201231.pkl
nginx/: Dockerfile  nginx.conf
