[tool.poetry]
name = "harvey_prod"
version = "0.0.1"
description = "Simplistic API for hosting prod models"
authors = [
  "edazizovv",
]
license = "MIT"
readme = "README.md"
packages = [{include = "harvey_prod"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"